--- a/app/src/main/res/layout/activity_edit_link.xml
+++ b/app/src/main/res/layout/activity_edit_link.xml
@@ -241,22 +241,17 @@
         android:padding="24dp">
 
         <android.widget.Button
-            android:id="@+id/cancelButton"
+            android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:background="@drawable/button_cancel"
-            android:textColor="@color/black"
-            android:visibility="invisible"
-            tools:visibility="visible" />
+            android:background="@drawable/ripple_drawable_cancel" />
 
         <android.widget.Button
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_save"
-            android:visibility="invisible"
-            tools:visibility="visible" />
+            android:layout_marginStart="12dp"
+            android:background="@drawable/ripple_drawable_save" />
     </LinearLayout>
 
 </LinearLayout>
