--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -330,24 +330,17 @@
         android:visibility="gone">
 
         <android.widget.Button
-            android:id="@+id/cancelButton"
+            android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/button_cancel"
-            android:clickable="false" />
+            android:background="@drawable/ripple_drawable_cancel" />
 
         <android.widget.Button
-            android:id="@+id/SaveButton"
+            android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/button_save"
-            android:clickable="false" />
+            android:layout_marginStart="12dp"
+            android:background="@drawable/ripple_drawable_save" />
     </LinearLayout>
 
 </LinearLayout>
