--- a/app/src/main/res/layout/activity_edit_folder.xml
+++ b/app/src/main/res/layout/activity_edit_folder.xml
@@ -34,12 +34,12 @@
             tools:visibility="visible" />
 
         <ImageButton
-            android:id="@+id/shareOrRemoveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
             android:backgroundTint="#00000000"
-            android:src="@drawable/ic_baseline_more_vert_24" />
+            android:src="@drawable/ic_baseline_more_vert_24"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
