--- a/app/src/main/res/menu/folder_menu.xml
+++ b/app/src/main/res/menu/folder_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/folderEditButton"
+        android:title="편집하기"/>
     <item android:id="@+id/folderShareButton"
         android:title="@string/shareString"/>
-
+    <item android:id="@+id/folderRemoveButton"
+        android:title="삭제하기"/>
 </menu>
