--- a/app/src/main/res/layout/activity_add_folder.xml
+++ b/app/src/main/res/layout/activity_add_folder.xml
@@ -1,56 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/wholeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
 
     <View
         android:id="@+id/transparentView"
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/parentView"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:id="@+id/parentView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/bottom_popup_shape"
-        android:gravity="top"
+        android:gravity="bottom"
+        app:layout_constraintStart_toEndOf="@id/transparentView"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical">
 
         <View
             android:id="@+id/lineView"
-            android:layout_width="70dp"
+            android:layout_width="72dp"
             android:layout_height="5dp"
             android:layout_gravity="center"
-            android:layout_marginVertical="22dp"
+            android:layout_marginTop="15dp"
             android:background="@color/gray_cc" />
 
         <LinearLayout
             android:id="@+id/folderNameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="40dp"
             android:orientation="horizontal"
-            android:paddingHorizontal="30dp"
-            android:paddingVertical="10dp">
+            android:paddingHorizontal="22dp">
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/ic_folder" />
 
             <EditText
                 android:id="@+id/folderNameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
+                android:layout_marginHorizontal="24dp"
                 android:background="@null"
                 android:hint="@string/folderName"
                 android:imeOptions="actionDone"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -59,8 +65,8 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="15dp"
             android:background="@color/gray_cc" />
 
         <LinearLayout
@@ -68,18 +74,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingHorizontal="30dp"
-            android:paddingVertical="10dp">
+            android:paddingHorizontal="22dp"
+            android:layout_marginTop="15dp">
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/ic_add_link_bell" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
+                android:layout_marginHorizontal="24dp"
                 android:layout_weight="1"
                 android:text="@string/settingReminder"
                 android:textColor="#000000"
@@ -98,7 +104,8 @@
             android:id="@+id/buttonLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="33dp"
             android:layout_marginRight="30dp"
             android:gravity="end"
             android:orientation="horizontal">
@@ -122,4 +129,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
