--- a/app/src/main/res/layout/activity_add_link.xml
+++ b/app/src/main/res/layout/activity_add_link.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottomSheetDashBoardLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
 
     <View
         android:id="@+id/transparentView"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/parentView"
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:id="@+id/parentView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/bottom_popup_shape"
         android:gravity="top"
+        app:layout_constraintStart_toEndOf="@id/transparentView"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical">
 
         <View
@@ -25,26 +31,27 @@
             android:layout_width="70dp"
             android:layout_height="5dp"
             android:layout_gravity="center"
-            android:layout_marginVertical="22dp"
+            android:layout_marginTop="15dp"
             android:background="@color/gray_cc" />
 
         <LinearLayout
             android:id="@+id/linkNameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal"
-            android:paddingHorizontal="30dp">
+            android:layout_marginTop="40dp"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/linkNameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
+                android:layout_marginHorizontal="24dp"
                 android:background="#00FFFFFF"
                 android:hint="제목"
+                android:textStyle="bold"
                 android:imeOptions="actionDone"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -53,28 +60,27 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="15dp"
             android:background="@color/gray_cc" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingHorizontal="30dp"
-            android:paddingVertical="5dp">
+            android:paddingHorizontal="22dp">
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/ic_folder" />
 
             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:layout_marginHorizontal="10dp"
+                android:layout_height="24dp"
+                android:layout_marginHorizontal="22dp"
                 android:layout_weight="1"
                 android:background="@drawable/spinner_selector" />
         </LinearLayout>
@@ -84,8 +90,8 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="15dp"
             android:background="@color/gray_cc" />
 
         <LinearLayout
@@ -93,23 +99,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingHorizontal="30dp"
-            android:paddingVertical="5dp">
+            android:paddingHorizontal="22dp">
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/ic_add_link_link" />
 
             <EditText
                 android:id="@+id/linkEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
+                android:layout_marginHorizontal="22dp"
                 android:background="@null"
                 android:hint="@string/linkText"
+                android:textStyle="bold"
                 android:imeOptions="actionDone"
-                android:inputType="textUri" />
+                android:inputType="textUri"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -118,8 +125,8 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="15dp"
             android:background="@color/gray_cc" />
 
         <LinearLayout
@@ -127,23 +134,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingHorizontal="30dp"
-            android:paddingVertical="5dp">
+            android:paddingHorizontal="22dp">
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/ic_memo" />
 
             <EditText
                 android:id="@+id/descriptionEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
+                android:layout_marginHorizontal="22dp"
                 android:background="@null"
                 android:hint="@string/memo"
+                android:textStyle="bold"
                 android:imeOptions="actionDone"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -152,8 +160,8 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="15dp"
             android:background="@color/gray_cc" />
 
         <LinearLayout
@@ -161,18 +169,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingHorizontal="30dp"
-            android:paddingVertical="5dp">
+            android:paddingHorizontal="22dp">
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/ic_add_link_bookmark" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
+                android:layout_marginHorizontal="22dp"
                 android:layout_weight="1"
                 android:text="즐겨찾기 설정"
                 android:textColor="#000000"
@@ -187,45 +194,6 @@
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
         </LinearLayout>
 
-        <View
-            android:id="@+id/lineView7"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="10dp"
-            android:background="@color/gray_cc" />
-
-        <LinearLayout
-            android:id="@+id/reminderLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingHorizontal="30dp"
-            android:paddingVertical="5dp">
-
-            <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
-                android:src="@drawable/ic_add_link_bell" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:layout_weight="1"
-                android:text="@string/settingReminder"
-                android:textColor="#000000"
-                android:textSize="16sp" />
-
-            <Switch
-                android:id="@+id/reminderSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:thumbTint="#FFFFFF"
-                android:track="@drawable/switch_track_selector"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
-        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/buttonLayout"
@@ -233,6 +201,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginRight="30dp"
+            android:layout_marginBottom="10dp"
             android:gravity="end"
             android:orientation="horizontal">
 
@@ -253,4 +222,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
