--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -100,8 +100,8 @@
                 android:gravity="center|top">
 
                 <ImageView
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_marginVertical="8dp"
                     android:src="@drawable/ic_add_link_bell" />
 
@@ -116,6 +116,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="4dp"
+                        android:layout_marginLeft="5dp"
                         android:padding="8dp"
                         android:text="알림 주기"
                         android:textSize="16sp"
@@ -126,6 +127,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="4dp"
+                        android:layout_marginLeft="7dp"
                         android:textColor="#505050"
                         android:padding="6dp"
                         android:textSize="16sp"
@@ -136,6 +138,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="4dp"
+                        android:layout_marginLeft="7dp"
                         android:textColor="#505050"
                         android:padding="6dp"
                         android:textSize="16sp"
@@ -297,11 +300,11 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="14dp"
+                    android:layout_marginHorizontal="25dp"
                     android:layout_weight="1"
                     android:text="@string/remindFoldersStrung"
                     android:textColor="#505050"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
                 <android.widget.Button
                     android:id="@+id/isAllFolderSwitchButton"
@@ -314,12 +317,28 @@
                 android:id="@+id/remindFolderRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="30dp"
+                android:layout_marginHorizontal="40dp"
                 android:layout_marginVertical="14dp"/>
 
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <LinearLayout
+        android:id="@+id/testButtonLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <android.widget.Button
+            android:id="@+id/testButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/ic_button_test" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/buttonLayout"
@@ -333,13 +352,18 @@
             android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="28dp"
+
             android:background="@drawable/ripple_drawable_cancel" />
+
 
         <android.widget.Button
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="28dp"
             android:background="@drawable/ripple_drawable_save" />
     </LinearLayout>
 
