--- a/app/src/main/res/layout/activity_edit_folder.xml
+++ b/app/src/main/res/layout/activity_edit_folder.xml
@@ -79,12 +79,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="12dp">
+        android:layout_marginVertical="15dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:src="@drawable/ic_memo" />
 
         <EditText
@@ -116,23 +115,23 @@
         android:id="@+id/reminderLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="15dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
-        android:paddingVertical="24dp">
+        android:paddingHorizontal="24dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_bell" />
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_add_link_bell" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="14dp"
             android:layout_weight="1"
-            android:hint="@string/settingReminder"
-            android:textColor="@color/black"
+            android:text="@string/settingReminder"
+            android:textColor="#242424"
             android:textSize="18sp" />
 
         <Switch
