--- a/app/src/main/res/layout/activity_edit_link.xml
+++ b/app/src/main/res/layout/activity_edit_link.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:orientation="horizontal">
 
 
@@ -18,13 +17,14 @@
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
             android:backgroundTint="#00000000"
+            android:layout_alignParentLeft="true"
             android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />
 
         <TextView
             android:id="@+id/topBarTextView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_centerInParent="true"
             android:gravity="center"
             android:text="@string/editText"
             android:textColor="@color/black"
@@ -38,10 +38,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
+            android:layout_alignParentRight="true"
             android:backgroundTint="#00000000"
             android:src="@drawable/ic_menubar_button_black" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/saveButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="12dp"
+            android:text="완료"
+            android:textColor="#999999"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
@@ -200,26 +215,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:orientation="horizontal"
-        android:padding="24dp">
-
-        <android.widget.Button
-            android:id="@+id/cancel_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ripple_drawable_cancel" />
-
-        <android.widget.Button
-            android:id="@+id/saveButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:background="@drawable/ripple_drawable_save" />
-    </LinearLayout>
 
 </LinearLayout>
