--- a/app/src/main/res/layout/item_link.xml
+++ b/app/src/main/res/layout/item_link.xml
@@ -5,7 +5,7 @@
     android:layout_height="62dp"
     android:layout_marginVertical="8dp"
     android:layout_marginHorizontal="7dp"
-    android:background="@drawable/link_item_shape"
+    android:foreground="@drawable/link_item_shape"
     android:orientation="horizontal">
 
     <ImageView
@@ -45,16 +45,18 @@
         android:layout_gravity="top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp"
         android:visibility="invisible"
         android:background="@drawable/ic_bookmarked"/>
 
-    <ImageButton
-        android:padding="15dp"
-        android:layout_gravity="center_vertical"
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/editButton"
         android:layout_width="wrap_content"
-        android:background="@android:color/transparent"
-        android:src="@drawable/ic_link"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/link_background"
+        android:paddingVertical="20dp"
+        android:paddingHorizontal="15dp"
+        android:src="@drawable/ic_link" />
 
 </LinearLayout>
