Fix tutorial design

--- a/app/src/main/res/layout/tutorial1.xml
+++ b/app/src/main/res/layout/tutorial1.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
+        android:layout_marginBottom="5dp"
         android:gravity="center"
         android:text="나의 소중한 별인 북마크 정보를"
         android:paddingHorizontal="83dp"
@@ -32,7 +33,7 @@
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="관리하고 상기해 보세요"
+        android:text="쉽게 관리하고 상기해 보세요"
         android:paddingHorizontal="83dp"
         android:textColor="#242424"
         android:gravity="center"
