Fix design of bookmark item

--- a/app/src/main/res/layout/item_link.xml
+++ b/app/src/main/res/layout/item_link.xml
@@ -31,13 +31,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <TextView
-            android:layout_gravity="left"
-            android:id="@+id/linkTextView"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:ellipsize="end"/>
+<!--        <TextView-->
+<!--            android:layout_gravity="left"-->
+<!--            android:id="@+id/linkTextView"-->
+<!--            android:layout_width="150dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:maxLines="1"-->
+<!--            android:ellipsize="end"/>-->
     </LinearLayout>
 
     <ImageView
